# buffy-xbox-decomp-tools

./: README.md  package-lock.json  package.json
src/: App.svelte  scene.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/meshes/all/: axe(base).msh  baseballbat(base).msh  benchconcrete(base).msh  benchwood(base).msh  blanket(base).msh  bomb01(base).msh  book01(base).msh  book02(base).msh  book03(base).msh  book04(base).msh  bookdreamers_open(base).msh  booknecro(base).msh  booknecro_open(base).msh  boxcar01(base).msh  boxcardboard(base).msh  boxcardboard_damaged(base).msh  broom(base).msh  bucketmetal(base).msh  bush01(base).msh  bush02(base).msh  candelabra(base).msh  candle01(base).msh  candle02(base).msh  candle03(base).msh  candlepost(base).msh  candlepost01(base).msh  cem-fog2(base).msh  cem01_fog01(base).msh  cemdoorknob(base).msh  chair01(base).msh  chair_control(base).msh  chair_foldingn(base).msh  chairfoldingwood01(base).msh  chairgarden(base).msh  chairlibrary(base).msh  chest(base).msh  clothhang(base).msh  clouds(base).msh  clouds1(base).msh  coatrack(base).msh  (+184 more)
src-tauri/src/: main.rs
